ToolsFlyout: Fix tool link widths on mobile
Link widths were too narrow on mobile layouts

--- a/src/react/flyout-menus/ToolsFlyout/styles.scss
+++ b/src/react/flyout-menus/ToolsFlyout/styles.scss
@@ -170,6 +170,10 @@ $tool-logo-widths-mobile: (
       flex-direction: column;
     }
 
+    &__popular-list-item {
+      width: 100%;
+    }
+
     &__popular-list-item-link {
       padding-top: 0;
       padding-bottom: 0;
